# portfolio-site

./: .bacon-locations  .gitignore  Cargo.toml  README.md  index.html  input.css  tailwind.config.js
src/: app.rs  main.rs  navbar.rs
src/components/: button.rs  chip.rs  mod.rs  navbar.rs  tooltip.rs  window.rs  workspace.rs
src/components/modules/: about.rs  mod.rs
src/data/: bachelor_thesis.rs  bio.rs  defaults.rs  drone_project.rs  education.rs  hexchess_project.rs  imaginary_project.rs  master_thesis.rs  mod.rs  skills.rs  snake_project.rs  this_site.rs  tilde_project.rs  tohoku_paper.rs  workspace_config.json
src/utils/: tree.rs
