[package]
name = "portofolio-site"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.5", features = ["csr"] }
gloo-net = { version = "0.6.0", features = ["http"] }
console_error_panic_hook = { version = "0.1.7" }
leptos_meta = "0.8.5"
leptos_router = "0.8.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
